trunk-recorder/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: trunk-recorder
  namespace: trunk-recorder
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: trunk-recorder
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/16
        - 172.17.0.0/16
        - 172.18.0.0/16
        - 192.168.0.0/16
